commiting new code for W27D1

--- a/public/stack/index.html
+++ b/public/stack/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Stack</title>
+    <link rel="stylesheet" href="stack.css">
+    <script defer src="stack.js"></script>
 </head>
 <body>
-    <h1>View all projects Here</h1>
-    <ul>
-        <li><a href="/stack">Stack App</a></li>
-        <li><a href="/todo">Todo App</a></li>
-    </ul>
+    <h1>This is your Stack application</h1>
+    <p>To test the script if its is working checkout browser console</p>
 </body>
 </html>
